force-app/main/default/objects/Credit_ReBill_InvoiceSchedulerValidation__c/Credit_ReBill_InvoiceSchedulerValidation__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Gitlab US #9256 Credit &amp; Rebill  -- validation to avoid multiple creation on invoice scheduler on same time.</description>
    <label>Credit ReBill InvoiceSchedulerValidation</label>
</CustomObject>