force-app/main/default/objects/Credit_ReBill_InvoiceSchedulerValidation__c/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <description>this field is used to store the country</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>