force-app/main/default/objects/Credit_ReBill_InvoiceSchedulerValidation__c/fields/QTB_Legal_Entity_Number__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Number__c</fullName>
    <description>this field is used to store the Legal Entity numbers</description>
    <label>Legal Entity Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>