force-app/main/default/objects/Credit_ReBill_InvoiceSchedulerValidation__c/fields/QTB_Threshold_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Threshold_Approval_Amount__c</fullName>
    <label>Threshold Approval Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>